@@ -1,4 +1,9 @@
 
+* 2-3-stable *
+
+* Make login timeout and query timeout backward database.yml friendly for :dblib mode.
+
+
 * 2.3.12 *
 
 * Add multiple results set support with #execute_procedure for :dblib mode. [Ken Collins]
